:sparkles: Established DB connection - tons of code refactoring - frontend is communicating with backend - successfully mapping over data pulled from backend (YEAH BOI!)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
 	"extends": ["airbnb", "prettier"],
-	"plugins": ["prettier"],
+	"plugins": ["prettier", "jsx-a11y"],
 	"rules": {
 		"prettier/prettier": ["error"],
 		"indent": ["error", "tab"],
