--- a/react/package.json
+++ b/react/package.json
@@ -1,19 +1,18 @@
 {
-	"name": "minecraft-dwww",
+	"name": "minecraft-block-frontend",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.2.0"
 	},
 	"scripts": {
-		"build:css": "postcss src/styles/index.css -o src/index.css",
-		"watch:css": "postcss src/styles/index.css -o src/index.css -w",
-		"postbuild": "purgecss --config ./purgecss.config.js --out build/static/css/",
-		"test": "purgecss --css build/static/css/*.css --content build/static/css/*.css build/static/js/*.js build/static/index.html --out build/static/css",
-		"start": "yarn watch:css && react-scripts start",
-		"build": "yarn build:css && react-scripts build && yarn postbuild",
+		"css:build": "postcss src/styles/_main.css -o src/index.css",
+		"css:watch": "postcss src/styles/_main.css -o src/index.css -w",
+		"start": "NODE_ENV=development yarn css:watch & react-scripts start",
+		"build": "NODE_ENV=production yarn css:build && react-scripts build",
 		"eject": "react-scripts eject"
 	},
 	"browserslist": {
@@ -29,10 +28,12 @@
 		]
 	},
 	"devDependencies": {
+		"@fullhuman/postcss-purgecss": "^1.3.0",
 		"autoprefixer": "^9.7.3",
 		"postcss-cli": "^6.1.3",
 		"postcss-import": "^12.0.1",
 		"postcss-nested": "^4.2.1",
-		"tailwindcss": "^1.1.4"
+		"tailwindcss": "^1.1.4",
+		"typescript": "^3.7.4"
 	}
 }
