--- a/node/package.json
+++ b/node/package.json
@@ -25,6 +25,7 @@
 		"exec": "ts-node src/server.ts"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.639.0",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
@@ -34,6 +35,7 @@
 		"nodemon": "^2.0.2"
 	},
 	"devDependencies": {
+		"@types/async": "^3.0.8",
 		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.2",
 		"@types/helmet": "^0.0.45",
