--- a/node/package.json
+++ b/node/package.json
@@ -20,6 +20,7 @@
 		"ext": "ts",
 		"ignore": [
 			"./**/*.spec.ts",
+			"./tmp",
 			"node_modules"
 		],
 		"exec": "ts-node src/server.ts"
@@ -30,18 +31,28 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"formidable": "^1.2.2",
 		"helmet": "^3.21.3",
+		"mkdirp": "^1.0.3",
 		"mongodb": "^3.5.4",
-		"nodemon": "^2.0.2"
+		"multer": "^1.4.2",
+		"nodemon": "^2.0.2",
+		"sharp": "^0.25.1",
+		"uuid": "^7.0.2"
 	},
 	"devDependencies": {
 		"@types/async": "^3.0.8",
 		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.2",
+		"@types/formidable": "^1.0.31",
 		"@types/helmet": "^0.0.45",
+		"@types/mkdirp": "^1.0.0",
 		"@types/mongodb": "^3.3.16",
+		"@types/multer": "^1.4.2",
 		"@types/node": "^13.7.7",
+		"@types/sharp": "^0.24.0",
 		"@types/shelljs": "^0.8.6",
+		"@types/uuid": "^7.0.0",
 		"npm-run-all": "^4.1.5",
 		"rimraf": "^3.0.2",
 		"shelljs": "^0.8.3",
